Export von Gesamtwertungen

--- a/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index-empty/view.html
+++ b/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index-empty/view.html
@@ -133,6 +133,21 @@ Erweitert
 <p>Mit Gesamtwertungen kann man mehrere Ergebnislisten kombinieren.</p>
 
 </div>
+<div class='card-footer'>
+<div class='d-flex justify-content-between align-items-start'>
+<div></div>
+<div>
+<div class='btn-group'>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.pdf">Alle als PDF
+<i class='far fa-file-pdf'></i>
+</a>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.xlsx">Alle als XLS
+<i class='far fa-file-excel'></i>
+</a>
+</div>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
