--- a/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index/view.html
+++ b/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index/view.html
@@ -166,6 +166,51 @@ LA
 <div></div>
 <div>
 <div class='btn-group'>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">PDF
+<i class='far fa-file-pdf'></i>
+</a>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">XLS
+<i class='far fa-file-excel'></i>
+</a>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID/edit">Urkunden
+<i class='far fa-file-certificate'></i>
+</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class='card mb-3'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'><i class='far fa-eye' title='Öffentlich'></i>
+other
+</h4>
+<a class="card-primary-action" href="/2024/mv-cup/score/competition_results/UUID/edit">Bearbeiten
+<i class='far fa-edit'></i>
+</a>
+</div>
+</div>
+<table class='table table-bordered'>
+<tr>
+<th>Platz</th>
+<th>Mannschaft</th>
+<th class='small sum-points'>Punkte</th>
+</tr>
+</table>
+
+
+<div class='card-footer'>
+<div class='d-flex justify-content-between align-items-start'>
+<div></div>
+<div>
+<div class='btn-group'>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">PDF
+<i class='far fa-file-pdf'></i>
+</a>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">XLS
+<i class='far fa-file-excel'></i>
+</a>
 <a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID/edit">Urkunden
 <i class='far fa-file-certificate'></i>
 </a>
@@ -188,6 +233,21 @@ LA
 <div class='card-body'>
 <p>Mit Gesamtwertungen kann man mehrere Ergebnislisten kombinieren.</p>
 
+</div>
+<div class='card-footer'>
+<div class='d-flex justify-content-between align-items-start'>
+<div></div>
+<div>
+<div class='btn-group'>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.pdf">Alle als PDF
+<i class='far fa-file-pdf'></i>
+</a>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.xlsx">Alle als XLS
+<i class='far fa-file-excel'></i>
+</a>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
