--- a/app/views/competitions/score/competition_results/index.html.haml
+++ b/app/views/competitions/score/competition_results/index.html.haml
@@ -17,6 +17,8 @@
             - actions.link_to t('a.edit'), { action: :edit, id: result.id }, end_icon: :edit
 
           - card.actions do |actions|
+            - actions.link_to 'PDF', { action: :show, id: result.id, format: :pdf }, end_icon: :file_pdf
+            - actions.link_to 'XLS', { action: :show, id: result.id, format: :pdf }, end_icon: :file_excel
             - actions.link_to 'Urkunden', { action: :edit, id: result.id }, end_icon: :file_certificate
       - elsif result.hidden?
         = card_body(result.name) do
@@ -25,5 +27,10 @@
     = card(t('a.actions'), class: 'mb-3') do |card|
       - card.primary_actions do |actions|
         - actions.link_to t('a.add'), { action: :new }, end_icon: :square_plus
+
       - card.body do
         %p Mit Gesamtwertungen kann man mehrere Ergebnislisten kombinieren.
+
+      - card.actions do |actions|
+        - actions.link_to 'Alle als PDF', { action: :index, format: :pdf }, end_icon: :file_pdf
+        - actions.link_to 'Alle als XLS', { action: :index, format: :xlsx }, end_icon: :file_excel
