--- a/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index-with-hidden/view.html
+++ b/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index-with-hidden/view.html
@@ -162,6 +162,12 @@ LA
 <div></div>
 <div>
 <div class='btn-group'>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">PDF
+<i class='far fa-file-pdf'></i>
+</a>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">XLS
+<i class='far fa-file-excel'></i>
+</a>
 <a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID/edit">Urkunden
 <i class='far fa-file-certificate'></i>
 </a>
@@ -184,6 +190,21 @@ LA
 <div class='card-body'>
 <p>Mit Gesamtwertungen kann man mehrere Ergebnislisten kombinieren.</p>
 
+</div>
+<div class='card-footer'>
+<div class='d-flex justify-content-between align-items-start'>
+<div></div>
+<div>
+<div class='btn-group'>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.pdf">Alle als PDF
+<i class='far fa-file-pdf'></i>
+</a>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.xlsx">Alle als XLS
+<i class='far fa-file-excel'></i>
+</a>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
