Export-Icons vereinheitlichen

--- a/app/views/application/_card.html.haml
+++ b/app/views/application/_card.html.haml
@@ -4,7 +4,7 @@
       .d-flex.justify-content-between
         %h4.m-0.py-2.ps-3= card.title
         - card.primary_actions.each do |action|
-          = render 'nav_link', link: action, a_class: 'card-primary-action'
+          = render 'nav_link', link: action, a_class: 'card-primary-action', link_options: action.link_options
   - if card.direct.present?
     = card.direct.try(:html_safe)
   - if card.body.present?
@@ -18,6 +18,6 @@
           %div
             .btn-group
               - card.actions.each do |action|
-                = render 'nav_link', link: action, a_class: 'btn btn-outline-secondary btn-sm'
+                = render 'nav_link', link: action, a_class: 'btn btn-outline-secondary btn-sm', link_options: action.link_options
   - elsif card.footer.present?
     .card-footer= card.footer
