--- a/app/views/competition_nested/index.html.haml
+++ b/app/views/competition_nested/index.html.haml
@@ -13,9 +13,9 @@
         = card.primary_actions do |actions|
           = actions.link_to t('a.add'), { action: :new }, end_icon: :square_plus
 
-      = card.actions do |actions|
-        = actions.link_to 'als PDF', { format: :pdf }, target: '_blank', rel: 'noopener'
-        = actions.link_to 'als XLS', format: :xlsx
+      - card.actions do |actions|
+        - actions.link_to 'PDF', { format: :pdf }, end_icon: :file_pdf, target: '_blank', rel: 'noopener'
+        - actions.link_to 'XLS', { format: :xlsx }, end_icon: :file_excel
 
     = render('index_bottom', resource_class:, resource_collection:)
   .col-md-4= render('index_right', resource_class:, resource_collection:)
