--- a/spec/fixtures/views/competitions_certificates_templates_manage_templates_uses_CRUD-index-empty/view.html
+++ b/spec/fixtures/views/competitions_certificates_templates_manage_templates_uses_CRUD-index-empty/view.html
@@ -124,9 +124,11 @@ Erweitert
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/certificates/templates.pdf">als PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/certificates/templates.pdf">PDF
+<i class='far fa-file-pdf'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/certificates/templates.xlsx">als XLS
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/certificates/templates.xlsx">XLS
+<i class='far fa-file-excel'></i>
 </a>
 </div>
 </div>
