--- a/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index-empty/view.html
+++ b/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index-empty/view.html
@@ -138,7 +138,7 @@ Erweitert
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.pdf">Alle als PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.pdf">Alle als PDF
 <i class='far fa-file-pdf'></i>
 </a>
 <a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.xlsx">Alle als XLS
