--- a/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index/view.html
+++ b/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index/view.html
@@ -166,10 +166,10 @@ LA
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">PDF
 <i class='far fa-file-pdf'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">XLS
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.xlsx">XLS
 <i class='far fa-file-excel'></i>
 </a>
 <a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID/edit">Urkunden
@@ -205,10 +205,10 @@ other
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">PDF
 <i class='far fa-file-pdf'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.pdf">XLS
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.xlsx">XLS
 <i class='far fa-file-excel'></i>
 </a>
 <a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID/edit">Urkunden
@@ -239,7 +239,7 @@ other
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.pdf">Alle als PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.pdf">Alle als PDF
 <i class='far fa-file-pdf'></i>
 </a>
 <a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results.xlsx">Alle als XLS
