--- a/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show/view.html
+++ b/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show/view.html
@@ -158,13 +158,17 @@ Ja
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.pdf?only=group_assessment">Mannschaftswertung als PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.pdf?only=group_assessment">Mannschaftswertung als PDF
+<i class='far fa-file-pdf'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.pdf?only=single_competitors">Einzelwertung als PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.pdf?only=single_competitors">Einzelwertung als PDF
+<i class='far fa-file-pdf'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.pdf">Komplett als PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.pdf">Komplett als PDF
+<i class='far fa-file-pdf'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.xlsx">als XLS
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/results/UUID.xlsx">XLS
+<i class='far fa-file-excel'></i>
 </a>
 </div>
 </div>
