--- a/spec/fixtures/views/Band_bands_managements_uses_CRUD-index-two-entries/view.html
+++ b/spec/fixtures/views/Band_bands_managements_uses_CRUD-index-two-entries/view.html
@@ -170,9 +170,11 @@ Erweitert
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/bands.pdf">als PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/bands.pdf">PDF
+<i class='far fa-file-pdf'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/bands.xlsx">als XLS
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/bands.xlsx">XLS
+<i class='far fa-file-excel'></i>
 </a>
 </div>
 </div>
