--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-team-with-destroy/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-team-with-destroy/view.html
@@ -182,9 +182,11 @@ Frauen-Team
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.pdf">als PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.pdf">PDF
+<i class='far fa-file-pdf'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.xlsx">als XLS
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.xlsx">XLS
+<i class='far fa-file-excel'></i>
 </a>
 </div>
 </div>
@@ -217,9 +219,11 @@ Frauen-Team
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.pdf">PDF
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.pdf">PDF
+<i class='far fa-file-pdf'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.pdf?more_columns=true">PDF für Kampfrichter
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists/UUID.pdf?more_columns=true">PDF für Kampfrichter
+<i class='far fa-file-pdf'></i>
 </a>
 </div>
 </div>
