--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-index-empty/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-index-empty/view.html
@@ -129,6 +129,21 @@ Erweitert
 <div class='alert alert-info'>Keine Einträge gefunden</div>
 
 </div>
+<div class='card-footer'>
+<div class='d-flex justify-content-between align-items-start'>
+<div></div>
+<div>
+<div class='btn-group'>
+<a target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/teams.pdf">PDF
+<i class='far fa-file-pdf'></i>
+</a>
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/teams.xlsx">XLS
+<i class='far fa-file-excel'></i>
+</a>
+</div>
+</div>
+</div>
+</div>
 </div>
 </div>
 </body>
