--- a/spec/fixtures/views/competitions_editings_edit_competition_uses_CRUD-edit/view.html
+++ b/spec/fixtures/views/competitions_editings_edit_competition_uses_CRUD-edit/view.html
@@ -120,6 +120,17 @@ Erweitert
 Der Wettkampf *MV-Cup* findet am **29.02.2024** in **Rostock** statt.
 
 Weitere Informationen folgen.</textarea></div>
+<fieldset class='group'>
+<legend>Kennzeichnungen</legend>
+<div class='row'>
+<div class='col-md-6'>
+<fieldset class="form-group boolean optional competition_lottery_numbers"><div class="form-check"><input name="competition[lottery_numbers]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="competition[lottery_numbers]" id="competition_lottery_numbers" /><label class="form-check-label boolean optional" for="competition_lottery_numbers">Losnummern</label><small class="form-text text-muted">Mit Losnummern kann die Reihenfolge der Mannschaften vorgegeben werden. Die Losnummern können dann bei den Mannschaften eingegeben werden, so wie außerhalb des Systems gezogen wurden.</small></div></fieldset>
+</div>
+<div class='col-md-6'>
+<fieldset class="form-group boolean optional competition_show_bib_numbers"><div class="form-check"><input name="competition[show_bib_numbers]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="competition[show_bib_numbers]" id="competition_show_bib_numbers" /><label class="form-check-label boolean optional" for="competition_show_bib_numbers">Startnummern</label><small class="form-text text-muted">Startnummern können zu Personen vergeben werden und werden dann bei Startlisten mit angezeigt.</small></div></fieldset>
+</div>
+</div>
+</fieldset>
 
 </div>
 <div class='card-footer'>
