--- a/app/views/competitions/teams/index.html.haml
+++ b/app/views/competitions/teams/index.html.haml
@@ -9,5 +9,9 @@
         .alert.alert-info= t('a.no_entries_found')
 
     - if can?(:create, resource_class.new(competition: @competition, band:))
-      = card.primary_actions do |actions|
-        = actions.link_to t('a.add'), { action: :new, band_id: band.id }, end_icon: :square_plus
+      - card.primary_actions do |actions|
+        - actions.link_to t('a.add'), { action: :new, band_id: band.id }, end_icon: :square_plus
+
+      - card.actions do |actions|
+        - actions.link_to 'PDF', { format: :pdf }, end_icon: :file_pdf, target: '_blank', rel: 'noopener'
+        - actions.link_to 'XLS', { format: :xlsx }, end_icon: :file_excel
