--- a/spec/fixtures/views/competitions_editings_edit_competition_uses_CRUD-edit-error/view.html
+++ b/spec/fixtures/views/competitions_editings_edit_competition_uses_CRUD-edit-error/view.html
@@ -130,6 +130,20 @@ new-description</textarea></div>
 </div>
 </div>
 </fieldset>
+<fieldset class='group'>
+<legend>Flyer</legend>
+<div class='row'>
+<div class='col-md-6'>
+<div class="form-group my-2 string optional competition_flyer_headline form-group-valid"><label class="control-label string optional" for="competition_flyer_headline">Flyer-Überschrift</label><input class="form-control string optional" type="text" value="Webseite mit Ergebnissen im Internet" name="competition[flyer_headline]" id="competition_flyer_headline" /></div>
+</div>
+<div class='col-md-6'>
+<div class="form-group my-2 text optional competition_flyer_content form-group-valid"><label class="control-label text optional" for="competition_flyer_content">Flyer-Inhalt</label><textarea class="form-control text optional" name="competition[flyer_content]" id="competition_flyer_content">
+- Ergebnisse
+- Startlisten</textarea></div>
+</div>
+</div>
+<small class='text-muted'>Diese Werten werden auf dem PDF-Flyer zu diesem Wettkampf angezeigt.</small>
+</fieldset>
 
 </div>
 <div class='card-footer'>
