--- a/app/views/competitions/score/competition_results/index.html.haml
+++ b/app/views/competitions/score/competition_results/index.html.haml
@@ -19,7 +19,7 @@
           - card.actions do |actions|
             - actions.link_to 'PDF', { action: :show, id: result.id, format: :pdf }, end_icon: :file_pdf, target: '_blank', rel: 'noopener'
             - actions.link_to 'XLS', { action: :show, id: result.id, format: :xlsx }, end_icon: :file_excel
-            - actions.link_to 'Urkunden', { action: :edit, id: result.id }, end_icon: :file_certificate
+            - actions.link_to 'Urkunden', new_competition_certificates_list_path(competition_result_id: result.id), end_icon: :file_certificate
       - elsif result.hidden?
         = card_body(result.name) do
           Diese Gesamtwertung ist nicht öffentlich.
