--- a/spec/fixtures/views/competitions_certificates_lists_create_certificates_uses_template_and_results-new/view.html
+++ b/spec/fixtures/views/competitions_certificates_lists_create_certificates_uses_template_and_results-new/view.html
@@ -51,7 +51,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Gesamtwertung hinzufügen</p>
+<p class='lead m-0 ms-1'>Vorlage wählen</p>
 
 </div>
 </header>
@@ -64,6 +64,10 @@ Benutzer
 </div>
 <div class='nav-item'>
 <a class="nav-link" href="/2024/mv-cup/teams">Mannschaften
+</a>
+</div>
+<div class='nav-item'>
+<a class="nav-link" href="/2024/mv-cup/people">Wettkämpfer
 </a>
 </div>
 <div class='nav-item'>
@@ -91,8 +95,8 @@ Erweitert
 <a class="dropdown-item" href="/2024/mv-cup/assessments">Wertungen
 </a>
 </div>
-<div class='active'>
-<a class="dropdown-item active" aria-current="page" href="/2024/mv-cup/score/competition_results">Gesamtwertungen
+<div class=''>
+<a class="dropdown-item" href="/2024/mv-cup/score/competition_results">Gesamtwertungen
 </a>
 </div>
 <div class=''>
@@ -113,40 +117,51 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
-<div class='alert alert-danger'>Bitte überprüfen Sie folgende Fehler:</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
-<div class='row'>
+<div class='row g-4'>
 <div class='col-md-8'>
-<form class="simple_form new_score_competition_result" id="new_score_competition_result" novalidate="novalidate" action="/2024/mv-cup/score/competition_results" accept-charset="UTF-8" method="post"><div class='card'>
+<form data-turbo="false" class="simple_form new_certificates_list" id="new_certificates_list" novalidate="novalidate" action="/2024/mv-cup/certificates/lists" accept-charset="UTF-8" method="post"><div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Gesamtwertung hinzufügen</h4>
+<h4 class='m-0 py-2 ps-3'>Urkunden</h4>
 </div>
 </div>
 <div class='card-body'>
-<datalist id='band-names'>
-<option value='Frauen'></option>
-</datalist>
-<div class="form-group my-2 string required score_competition_result_name form-group-invalid"><label class="control-label string required" for="score_competition_result_name">Name <abbr title="required">*</abbr></label><input class="form-control is-invalid string required" list="band-names" aria-invalid="true" type="text" value="" name="score_competition_result[name]" id="score_competition_result_name" /><div class="invalid-feedback">Name muss ausgefüllt werden</div><small class="form-text text-muted">Überlicherweise: Frauen oder Männer</small></div>
-<fieldset class="form-group boolean optional score_competition_result_hidden"><div class="form-check"><input name="score_competition_result[hidden]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="score_competition_result[hidden]" id="score_competition_result_hidden" /><label class="form-check-label boolean optional" for="score_competition_result_hidden">Verstecken</label></div></fieldset>
-<fieldset class="form-group radio_buttons required score_competition_result_result_type form-group-invalid"><div class="col-form-label pt-0">Punkteberechnung <abbr title="required">*</abbr></div><input type="hidden" name="score_competition_result[result_type]" value="" autocomplete="off" /><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="dcup" name="score_competition_result[result_type]" id="score_competition_result_result_type_dcup" /><label class="form-check-label collection_radio_buttons" for="score_competition_result_result_type_dcup">D-Cup</label></div><div class="form-check"><input class="form-check-input is-invalid radio_buttons required" aria-invalid="true" type="radio" value="places_to_points" name="score_competition_result[result_type]" id="score_competition_result_result_type_places_to_points" /><label class="form-check-label collection_radio_buttons" for="score_competition_result_result_type_places_to_points">Plätze zu Punkte</label></div><div class="invalid-feedback d-block">Punkteberechnung muss ausgefüllt werden</div></fieldset>
-<fieldset class="form-group check_boxes optional score_competition_result_results"><div class="col-form-label pt-0">Ergebnislisten</div><input type="hidden" name="score_competition_result[result_ids][]" value="" autocomplete="off" /><div class="form-check"><input class="form-check-input check_boxes optional" type="checkbox" value="UUID" name="score_competition_result[result_ids][]" id="score_competition_result_result_ids_UUID" /><label class="form-check-label collection_check_boxes" for="score_competition_result_result_ids_UUID">Löschangriff Nass - Frauen</label></div></fieldset>
+<div class="form-group my-2 select optional certificates_list_template_id"><label class="control-label select optional" for="certificates_list_template_id">Urkundenvorlage</label><select class="form-select select optional" name="certificates_list[template_id]" id="certificates_list_template_id"><option value="UUID">Einfache Vorlage</option></select></div>
+<fieldset class="form-group boolean optional certificates_list_background_image form-group-valid"><div class="form-check"><input name="certificates_list[background_image]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" checked="checked" name="certificates_list[background_image]" id="certificates_list_background_image" /><label class="form-check-label boolean optional" for="certificates_list_background_image">Hintergrundbild einbetten</label></div></fieldset>
+<div class='row'>
+<div class='col-md-5'><div class="form-group my-2 select optional certificates_list_score_result_id"><label class="control-label select optional" for="certificates_list_score_result_id">Ergebnisliste</label><select class="form-select select optional" name="certificates_list[score_result_id]" id="certificates_list_score_result_id"><option value="" label=" "></option>
+<option value="UUID">Hakenleitersteigen - Frauen</option></select></div></div>
+</div>
+<div class='row'>
+<div class='col-md-2'></div>
+<div class='col-md-3'>oder</div>
+</div>
+<div class='row'>
+<div class='col-md-5'><div class="form-group my-2 select optional certificates_list_competition_result_id"><label class="control-label select optional" for="certificates_list_competition_result_id">Gesamtwertung</label><select class="form-select select optional" name="certificates_list[competition_result_id]" id="certificates_list_competition_result_id"><option value="" label=" "></option>
+</select></div></div>
+</div>
+<div class='row'>
+<div class='col-md-2'></div>
+<div class='col-md-3'>oder</div>
+</div>
+<div class='row'>
+<div class='col-md-5'><div class="form-group my-2 select optional certificates_list_group_score_result_id"><label class="control-label select optional" for="certificates_list_group_score_result_id">Mannschaftwertung</label><select class="form-select select optional" name="certificates_list[group_score_result_id]" id="certificates_list_group_score_result_id"><option value="" label=" "></option>
+</select></div></div>
+</div>
 
 </div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Gesamtwertung erstellen</button>
-<a class="btn btn-secondary" href="/2024/mv-cup/score/competition_results">Abbrechen</a>
+<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Urkunden erstellen</button>
+<a class="btn btn-secondary" href="/2024/mv-cup/score/results">Abbrechen</a>
 </div>
 </div>
 </div>
 </div>
 </form></div>
-<div class='col-md-4'>
-
-</div>
 </div>
 </div>
 </body>
