--- a/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index/view.html
+++ b/spec/fixtures/views/competitions_score_competition_results_results_managements_uses_CRUD-index/view.html
@@ -172,7 +172,7 @@ LA
 <a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.xlsx">XLS
 <i class='far fa-file-excel'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID/edit">Urkunden
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/certificates/lists/new?competition_result_id=UUID">Urkunden
 <i class='far fa-file-certificate'></i>
 </a>
 </div>
@@ -211,7 +211,7 @@ other
 <a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID.xlsx">XLS
 <i class='far fa-file-excel'></i>
 </a>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/competition_results/UUID/edit">Urkunden
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/certificates/lists/new?competition_result_id=UUID">Urkunden
 <i class='far fa-file-certificate'></i>
 </a>
 </div>
