--- a/app/views/competitions/editings/edit.html.haml
+++ b/app/views/competitions/editings/edit.html.haml
@@ -7,7 +7,7 @@
         - c.body do
           = f.input :name, autofocus: true
           = f.input :date, html5: true
-          = f.input :locality
+          = f.input :place
           = f.input :description, input_html: { class: 'easymde-required' }
 
           %fieldset.group
