--- a/app/views/home/_competitions_card.html.haml
+++ b/app/views/home/_competitions_card.html.haml
@@ -25,4 +25,4 @@
                 %h6.mb-0= competition.name
                 .mt-0
                   %small= l(competition.date)
-                  %small= competition.locality
+                  %small= competition.place
