--- a/app/views/competitions/creations/new.html.haml
+++ b/app/views/competitions/creations/new.html.haml
@@ -7,7 +7,7 @@
         - c.body do
           = f.input :name, autofocus: true
           = f.input :date, html5: true
-          = f.input :locality, html5: true
+          = f.input :place, html5: true
         - c.footer do
           = f.primary_button :submit, 'Erstellen und weiter zum nächsten Schritt'
           = f.cancel_button(root_path)
