Mailer-Texte anpassen

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -54,7 +54,7 @@
                      <br/>
                      feusport.de - Verwaltung von Feuerwehrsportwettkämpfen
                      <br/>
-                     Ein kostenloser Dienst von und für Feuerwehrsportler!
+                     Ein kostenloser Dienst von und für Feuerwehrsportler.
                     </p>
                   </div>
                </td>
