--- a/spec/fixtures/views/CompetitionMailer_send_to_receiver_renders_the_headers_and_body/view.html
+++ b/spec/fixtures/views/CompetitionMailer_send_to_receiver_renders_the_headers_and_body/view.html
@@ -56,7 +56,7 @@
                      <br/>
                      feusport.de - Verwaltung von Feuerwehrsportwettkämpfen
                      <br/>
-                     Ein kostenloser Dienst von und für Feuerwehrsportler!
+                     Ein kostenloser Dienst von und für Feuerwehrsportler.
                     </p>
                   </div>
                </td>
