--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-show-empty/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-show-empty/view.html
@@ -197,7 +197,7 @@ Mannschaftswertung
 <div class='d-grid gap-2'>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/people/new?team=UUID">Wettkämpfer hinzufügen</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit">Name bearbeiten</a>
-<a data-confirm="Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!" class=" btn btn-light btn-sm" rel="nofollow" data-method="delete" href="/2024/mv-cup/teams/UUID">Löschen</a>
+<a data-turbo-method="delete" data-turbo-confirm="Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!" class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID">Löschen</a>
 </div>
 
 </div>
