--- a/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show/view.html
+++ b/spec/fixtures/views/competitions_score_results_results_managements_uses_CRUD-show/view.html
@@ -191,7 +191,7 @@ Ja
 <div class='d-grid gap-2'>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/results/UUID/edit">Bearbeiten</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/results/UUID/edit?form=series_assessments">Cup-Serie-Zugehörigkeit</a>
-<a data-confirm="Ergebnisliste wirklich löschen? Die zugehörigen Startlisten werden verändert!" class=" btn btn-light btn-sm" rel="nofollow" data-method="delete" href="/2024/mv-cup/score/results/UUID">Löschen</a>
+<a data-turbo-method="delete" data-turbo-confirm="Ergebnisliste wirklich löschen? Die zugehörigen Startlisten werden verändert!" class=" btn btn-light btn-sm" href="/2024/mv-cup/score/results/UUID">Löschen</a>
 </div>
 
 </div>
