--- a/app/views/competitions/people/show.html.haml
+++ b/app/views/competitions/people/show.html.haml
@@ -39,7 +39,7 @@
         - card.body do
           .d-grid.gap-2
             = btn_link_to 'Bearbeiten', action: :edit
-            = btn_link_to 'Löschen', { action: :destroy }, method: :delete, data: { confirm: 'Wettkämpfer wirklich löschen? Die zugehörigen Ergebnisse werden gelöscht!' }
+            = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Wettkämpfer wirklich löschen? Die zugehörigen Ergebnisse werden gelöscht!' }
 .row
   .col-md-8
     = render('assessment_request_card', editable: true)
