--- a/app/views/competitions/teams/show.html.haml
+++ b/app/views/competitions/teams/show.html.haml
@@ -50,15 +50,16 @@
                 - else
                   %i.far.fa-xmark
 
-  .col-md-4
-    = card(t('a.actions')) do |card|
-      - card.primary_actions do |actions|
-        - actions.link_to 'Übersicht', { action: :index }, end_icon: :list
-      - card.body do
-        .d-grid.gap-2
-          = btn_link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team)
-          = btn_link_to 'Name bearbeiten', { action: :edit }
-          = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!' }
+  - if can?(:edit, @competition)
+    .col-md-4
+      = card(t('a.actions')) do |card|
+        - card.primary_actions do |actions|
+          - actions.link_to 'Übersicht', { action: :index }, end_icon: :list
+        - card.body do
+          .d-grid.gap-2
+            = btn_link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team)
+            = btn_link_to 'Name bearbeiten', { action: :edit }
+            = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!' }
 
   - if can?(:edit, @competition) || @team.people.exists?
     .col-md-12#people-table
