Weiterleitungen zu Mannschaften verbessern

--- a/app/views/competitions/teams/show.html.haml
+++ b/app/views/competitions/teams/show.html.haml
@@ -57,7 +57,7 @@
           - actions.link_to 'Übersicht', { action: :index }, end_icon: :list
         - card.body do
           .d-grid.gap-2
-            = btn_link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team)
+            = btn_link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team, return_to: 'team')
             = btn_link_to 'Name bearbeiten', { action: :edit }
             = btn_link_to 'Löschen', { action: :destroy }, data: { turbo_method: 'delete', turbo_confirm: 'Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!' }
 
@@ -65,7 +65,7 @@
     .col-md-12#people-table
       = card(Team.human_attribute_name(:people)) do |card|
         - card.primary_actions do |actions|
-          - actions.link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team), end_icon: :square_plus
+          - actions.link_to 'Wettkämpfer hinzufügen', new_competition_person_path(team: @team, return_to: 'team'), end_icon: :square_plus
         - if @team.people.exists?
           - card.direct do
             = render('people_table', resource_collection: @team.people)
