--- a/spec/fixtures/views/Team_assessment_requests_can_manage_requests-show-assessment-requests/view.html
+++ b/spec/fixtures/views/Team_assessment_requests_can_manage_requests-show-assessment-requests/view.html
@@ -205,7 +205,7 @@ Außer der Wertung
 </div>
 <div class='card-body'>
 <div class='d-grid gap-2'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/people/new?team=UUID">Wettkämpfer hinzufügen</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/people/new?return_to=team&amp;team=UUID">Wettkämpfer hinzufügen</a>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID/edit">Name bearbeiten</a>
 <a data-turbo-method="delete" data-turbo-confirm="Mannschaft wirklich löschen? Alle Zeiten usw. werden auch gelöscht!" class=" btn btn-light btn-sm" href="/2024/mv-cup/teams/UUID">Löschen</a>
 </div>
@@ -218,7 +218,7 @@ Außer der Wertung
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
 <h4 class='m-0 py-2 ps-3'>Wettkämpfer</h4>
-<a class="card-primary-action" href="/2024/mv-cup/people/new?team=UUID">Wettkämpfer hinzufügen
+<a class="card-primary-action" href="/2024/mv-cup/people/new?return_to=team&amp;team=UUID">Wettkämpfer hinzufügen
 <i class='far fa-square-plus'></i>
 </a>
 </div>
