--- a/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-person/view.html
+++ b/spec/fixtures/views/Score_List_edit_list_shows_form_and_updates-show-person/view.html
@@ -292,7 +292,7 @@ Erweitert
 <div class='card-body'>
 <div class='d-grid gap-2'>
 <a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID/edit">Bearbeiten</a>
-<a data-confirm="Startliste wirklich löschen? Alle bisher eingetragenen Zeiten dieser Liste gehen verloren!" class=" btn btn-light btn-sm" rel="nofollow" data-method="delete" href="/2024/mv-cup/score/lists/UUID">Löschen</a>
+<a data-turbo-method="delete" data-turbo-confirm="Startliste wirklich löschen? Alle bisher eingetragenen Zeiten dieser Liste gehen verloren!" class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Löschen</a>
 </div>
 
 </div>
