--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_track_change_finish/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_track_change_finish/view.html
@@ -125,26 +125,32 @@ Erweitert
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Startliste erstellen - Schritt 7</h4>
+<h4 class='m-0 py-2 ps-3'>Startliste erstellen - Schritt 8</h4>
 </div>
 </div>
 <div class='card-body'>
-<form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="finish" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
-<div class="form-group my-2 select optional score_list_factory_before_list"><label class="control-label select optional" for="score_list_factory_before_list_id">Vorherige Liste</label><select class="form-select select optional" name="score_list_factory[before_list_id]" id="score_list_factory_before_list_id"><option selected="selected" value="UUID">Löschangriff Nass - Männer - Lauf 1</option></select></div>
-<table class='table table-condensed'>
+<form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="create" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+<h2>Voraussichtliche Liste</h2>
+<table class='table'>
 <tr>
-<th class=''>Bahn behalten</th>
-<td class=''>Die Bahn wird gegenüber einer vorherigen Liste behalten.</td>
+<th>Anzahl der Starter</th>
+<td>3</td>
 </tr>
-
+<tr>
+<th>Anzahl der Läufe</th>
+<td>2</td>
+</tr>
 </table>
-<button name="button" type="submit" class="btn btn-primary mt-3" data-disable-with="Bitte warten...">Weiter</button>
+<fieldset class="form-group boolean optional score_list_factory_hidden"><div class="form-check"><input name="score_list_factory[hidden]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="score_list_factory[hidden]" id="score_list_factory_hidden" /><label class="form-check-label boolean optional" for="score_list_factory_hidden">Startliste verstecken</label><small class="form-text text-muted">Manchmal ist es besser, die Startliste zuerst zu verstecken. Es kann dann zum Beispiel kontrolliert werden, ob die Reihenfolge stimmt.</small></div></fieldset>
+<fieldset class="form-group boolean optional score_list_factory_separate_target_times"><div class="form-check"><input name="score_list_factory[separate_target_times]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="score_list_factory[separate_target_times]" id="score_list_factory_separate_target_times" /><label class="form-check-label boolean optional" for="score_list_factory_separate_target_times">Zeiten für jedes Ziel separat aufnehmen</label><small class="form-text text-muted">Die Zeiten für das linke und rechte Ziel werden einzelnd erfasst. Die langsamere Zeit wird zur Wertungszeit.</small></div></fieldset>
+<fieldset class="form-group boolean optional score_list_factory_show_best_of_run"><div class="form-check"><input name="score_list_factory[show_best_of_run]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="score_list_factory[show_best_of_run]" id="score_list_factory_show_best_of_run" /><label class="form-check-label boolean optional" for="score_list_factory_show_best_of_run">Beste des Laufs anzeigen</label><small class="form-text text-muted">Zeige den Laufbesten hervorgehoben an, um z.B. schneller über das Schläuchemessen zu entscheiden.</small></div></fieldset>
+<button name="button" type="submit" class="btn btn-primary mt-3" data-disable-with="Bitte warten...">Startliste erstellen</button>
 
 </form>
 </div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div><form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="generator" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
+<div><form class="simple_form edit_score_list_factory" id="edit_score_list_factory" novalidate="novalidate" action="/2024/mv-cup/score/list_factories" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_factory_next_step"><input class="form-control hidden" value="generator_params" autocomplete="off" type="hidden" name="score_list_factory[next_step]" id="score_list_factory_next_step" /></div>
 <input type="submit" name="commit" value="Zurück" class="btn btn-light btn-sm" data-disable-with="Zurück" />
 <a data-turbo-method="delete" data-turbo-confirm="Listenerstellung abbrechen?" class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_factories">Abbrechen</a>
 </form></div>
@@ -198,10 +204,14 @@ Löschangriff Nass
 </td>
 </tr>
 <tr>
-<th class=''>Bahn behalten</th>
-<td class=''>Die Bahn wird gegenüber einer vorherigen Liste behalten.</td>
+<th class=''>Bahnwechsel</th>
+<td class=''>Die Bahn wird gegenüber einer vorherigen Liste getauscht.</td>
 </tr>
 
+<tr>
+<th>Vorherige Startliste</th>
+<td><a href="/2024/mv-cup/score/lists/UUID">Löschangriff Nass - Männer - Lauf 1</a></td>
+</tr>
 </table>
 
 </div>
