Importieren von Mannschaften
closes #8

--- a/spec/fixtures/views/Team_teams_managements_uses_CRUD-new/view.html
+++ b/spec/fixtures/views/Team_teams_managements_uses_CRUD-new/view.html
@@ -164,6 +164,22 @@ Keine Verknüpfung mit einer vorhandenen Mannschaft
 </div>
 </form></div>
 <div class='col-md-4'>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Aktionen</h4>
+<a class="card-primary-action" href="/2024/mv-cup/teams">Übersicht
+<i class='far fa-list'></i>
+</a>
+</div>
+</div>
+<div class='card-body'>
+<div class='d-grid gap-2'>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_import/new">Mannschaften importieren</a>
+</div>
+
+</div>
+</div>
 
 </div>
 </div>
