--- a/spec/fixtures/views/competition_team_imports_team_import_process_uses_import_rows-new-with-errors/view.html
+++ b/spec/fixtures/views/competition_team_imports_team_import_process_uses_import_rows-new-with-errors/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Mannschaften - MV-Cup - Feuerwehrsport</title>
+<title>MV-Cup - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -51,7 +51,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Mannschaft hinzufügen</p>
+<p class='lead m-0 ms-1'>Mannschaften importieren</p>
 
 </div>
 </header>
@@ -60,18 +60,6 @@ Benutzer
 <div class='nav nav-pills nav-tabs-responsive'>
 <div class='nav-item'>
 <a class="nav-link" href="/2024/mv-cup">Informationen
-</a>
-</div>
-<div class='nav-item active'>
-<a class="nav-link active" aria-current="page" href="/2024/mv-cup/teams">Mannschaften
-</a>
-</div>
-<div class='nav-item'>
-<a class="nav-link" href="/2024/mv-cup/score/lists">Startlisten
-</a>
-</div>
-<div class='nav-item'>
-<a class="nav-link" href="/2024/mv-cup/score/results">Ergebnisse
 </a>
 </div>
 <div class='dropdown nav-item'>
@@ -117,72 +105,30 @@ Erweitert
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
-<div class='row'>
+<div class='row g-4'>
 <div class='col-md-8'>
-<form class="simple_form new_team" id="new_team" novalidate="novalidate" action="/2024/mv-cup/teams" accept-charset="UTF-8" method="post"><div class='card'>
+<form data-turbo="false" class="simple_form new_team_import" id="new_team_import" novalidate="novalidate" action="/2024/mv-cup/team_import" accept-charset="UTF-8" method="post"><div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Mannschaft hinzufügen</h4>
+<h4 class='m-0 py-2 ps-3'>Mannschaften importieren</h4>
 </div>
 </div>
 <div class='card-body'>
-<input type="hidden" name="band_id" id="band_id" value="UUID" autocomplete="off" />
-<div class="form-group my-2 select required disabled team_band form-group-valid"><label class="control-label select required disabled" for="team_band_id">Wertungsgruppe <abbr title="required">*</abbr></label><select class="form-select select required disabled" disabled="disabled" name="team[band_id]" id="team_band_id"><option value="" label=" "></option>
-<option selected="selected" value="UUID">Frauen</option></select></div>
-<div class="form-group my-2 string required team_name form-group-valid"><label class="control-label string required" for="team_name">Name <abbr title="required">*</abbr></label><input class="form-control string required" autocomplete="off" type="text" value="new-name" name="team[name]" id="team_name" /><small class="form-text text-muted">Keine Nummern im Namen angeben!</small></div>
-<div class='suggestions-entries for-teams'>
-<table class='table table-hover table-condensed'></table>
-</div>
-<div class="form-group my-2 string required team_shortcut form-group-invalid"><label class="control-label string required" for="team_shortcut">Abkürzung <abbr title="required">*</abbr></label><input class="form-control is-invalid string required" maxlength="12" aria-invalid="true" size="12" type="text" name="team[shortcut]" id="team_shortcut" /><div class="invalid-feedback">Abkürzung muss ausgefüllt werden</div><small class="form-text text-muted">Keine Nummern im Namen angeben!</small></div>
-<div class="form-group my-2 integer required team_number form-group-valid"><label class="control-label integer required" for="team_number">Nummer <abbr title="required">*</abbr></label><input class="form-control numeric integer required" type="number" step="1" value="1" name="team[number]" id="team_number" /><small class="form-text text-muted">Die Nummer wird erst angezeigt, wenn es mehrere Mannschaften mit gleichen Namen gibt.</small></div>
-<input autocomplete="off" type="hidden" name="team[fire_sport_statistics_team_id]" id="team_fire_sport_statistics_team_id" />
-<div class='mb-0 mt-3'>Verknüpfung</div>
-<div class='alert alert-success mb-0 d-none' id='fire-sport-connected'>
-<div class='float-end'>
-<div class='btn btn-sm btn-light' id='fire-sport-remove' title='Verknüpfung entfernen'>
-<i class='far fa-trash'></i>
-</div>
-</div>
-<i class='far fa-check me-2'></i>
-Verknüpft mit <strong></strong>
-<a target="_blank" rel="noopener" title="Informationen über diese Mannschaft auf Feuerwehrsport-Statistik.de aufrufen" class="btn btn-sm btn-light ms-2" href="https://feuerwehrsport-statistik.de/teams/"><i class='far fa-arrow-up-right-from-square'></i>
-</a></div>
-<div class='alert alert-warning mb-0' id='fire-sport-not-connected'>
-<i class='far fa-warning me-2'></i>
-Keine Verknüpfung mit einer vorhandenen Mannschaft
-</div>
-
-<small class='form-text text-muted'>Eine Verknüpfung ist bei Wettkampfserien wichtig, um vorhanden Ergebnisse zu nutzen.</small>
+<fieldset class="form-group radio_buttons required team_import_band_id form-group-valid"><div class="col-form-label pt-0">Wertungsgruppe <abbr title="required">*</abbr></div><input type="hidden" name="team_import[band_id]" value="" autocomplete="off" /><div class="form-check"><input class="form-check-input radio_buttons required" required="required" aria-required="true" type="radio" value="UUID" checked="checked" name="team_import[band_id]" id="team_import_band_id_UUID" /><label class="form-check-label collection_radio_buttons" for="team_import_band_id_UUID">Frauen</label></div></fieldset>
+<div class="form-group my-2 text required team_import_import_rows form-group-invalid"><label class="control-label text required" for="team_import_import_rows">Namen <abbr title="required">*</abbr></label><textarea class="form-control is-invalid text required" required="required" aria-required="true" aria-invalid="true" name="team_import[import_rows]" id="team_import_import_rows">
+</textarea><div class="invalid-feedback">Namen muss ausgefüllt werden</div><small class="form-text text-muted">Bitte die Namen Zeilenweise angeben</small></div>
+<small class="form-text text-muted">Mannschaften, die schon vorhanden sind, werden übersprungen und nicht erneut angelegt.</small>
 
 </div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Mannschaft erstellen</button>
-<a class="btn btn-secondary" href="/2024/mv-cup/teams">Abbrechen</a>
+<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Importieren</button>
+<a class="btn btn-secondary" href="/2024/mv-cup/score/results">Abbrechen</a>
 </div>
 </div>
 </div>
 </div>
 </form></div>
-<div class='col-md-4'>
-<div class='card'>
-<div class='card-header p-0'>
-<div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Aktionen</h4>
-<a class="card-primary-action" href="/2024/mv-cup/teams">Übersicht
-<i class='far fa-list'></i>
-</a>
-</div>
-</div>
-<div class='card-body'>
-<div class='d-grid gap-2'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/team_import/new">Mannschaften importieren</a>
-</div>
-
-</div>
-</div>
-
-</div>
 </div>
 </div>
 </body>
