Vorlagen: Mehr Wertungen und Hinweise
refs #5

--- a/app/views/competitions/presets/edit.html.haml
+++ b/app/views/competitions/presets/edit.html.haml
@@ -11,3 +11,7 @@
         - c.footer do
           = f.primary_button :submit
           = f.cancel_button(competition_presets_path)
+  .col-md-4
+    = card_body do
+      %p Egal welche Vorlage du hier auswählst: Du hast später auch noch die Möglichkeit, selber Disziplinen, Wertungsgruppen, Wertungen und Ergebnisse zu ergänzen. Das System lässt dir dabei vollkommen freie Gestaltungsmöglichkeiten.
+      %p Wenn du nicht weiterkommst, frage einen der Multiplikatioren.
