--- a/spec/fixtures/views/competitions_presets_use_presets_use_single_disciplines-edit-with-error/view.html
+++ b/spec/fixtures/views/competitions_presets_use_presets_use_single_disciplines-edit-with-error/view.html
@@ -131,6 +131,15 @@ Erweitert
 </div>
 </div>
 </form></div>
+<div class='col-md-4'>
+<div class='card'>
+<div class='card-body'>
+<p>Egal welche Vorlage du hier auswählst: Du hast später auch noch die Möglichkeit, selber Disziplinen, Wertungsgruppen, Wertungen und Ergebnisse zu ergänzen. Das System lässt dir dabei vollkommen freie Gestaltungsmöglichkeiten.</p>
+<p>Wenn du nicht weiterkommst, frage einen der Multiplikatioren.</p>
+
+</div>
+</div>
+</div>
 </div>
 </div>
 </body>
