Zweikampf-Auswertung korrigieren
closes #2

--- a/app/views/competitions/score/competition_results/_form.html.haml
+++ b/app/views/competitions/score/competition_results/_form.html.haml
@@ -3,9 +3,12 @@
     - @competition.bands.sort.each do |band|
       %option{ value: band.name }
   = f.input :name, hint: 'Überlicherweise: Frauen oder Männer', input_html: { list: 'band-names' }
-  = f.input :hidden
-  = f.input :result_type, as: :radio_buttons, collection: Score::CompetitionResult.result_types.invert
-  = f.association :results, as: :check_boxes, collection: @competition.score_results.sort
+  %fieldset.group
+    = f.input :hidden, hint: 'Manchmal baut es mehr Spannung auf, wenn die Gesamtwertung nicht öffentlich einsehbar ist.'
+  %fieldset.group
+    = f.input :result_type, as: :radio_buttons, collection: Score::CompetitionResult.result_types.invert, hint: 'Es gibt unterschiedliche Punkteberechnungen. Probiere es aus, wenn du dir unsicher bist.'
+  %fieldset.group
+    = f.association :results, as: :check_boxes, collection: @competition.score_results.no_zweikampf.sort, hint: 'Wähle alle Ergebnislisten aus, die für diese Gesamtwertung genutzt werden sollen.'
 - card.footer do
   = f.primary_button :submit
   = f.cancel_button(competition_score_competition_results_path)
